update style to fix text overlap again

--- a/views/style.scss
+++ b/views/style.scss
@@ -466,7 +466,8 @@ h4{
   scroll-margin: 40vh;
 }
 .header-text-container p {
-  font-size: 24px;
+  font-size: 21px;
+  line-height: 1.25em;
 }
 .banner-text{
   position:absolute;
